# pydantic-env

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
pydantic_env/: __init__.py  models.py
